{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 60,
  "lineage": "264c75f0-ee8f-329c-e112-a3fc1d107184",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "my_default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386403274105:vpc/vpc-050fcc97512a350ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d073960b4b73628b",
            "default_route_table_id": "rtb-07f1c627470ea766f",
            "default_security_group_id": "sg-05a85b4ac3ac2deb7",
            "dhcp_options_id": "dopt-02bc6078853835773",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-050fcc97512a350ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f1c627470ea766f",
            "owner_id": "386403274105",
            "region": "us-east-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "386403274105",
            "id": "vpc-050fcc97512a350ad",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:386403274105:instance/i-09eb5539ff54d1241",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09eb5539ff54d1241",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terrafrom-automate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-031375bdfa2d31f8f"
              }
            ],
            "primary_network_interface_id": "eni-031375bdfa2d31f8f",
            "private_dns": "ip-172-31-24-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.10",
            "public_dns": "ec2-3-94-103-22.compute-1.amazonaws.com",
            "public_ip": "3.94.103.22",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0822b5fd1c50b113d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terrafrom-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0698db7aa15b1cda3",
            "tags": {
              "Name": "tf-automate-server"
            },
            "tags_all": {
              "Name": "tf-automate-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f69775abbe4ca1a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "386403274105",
            "id": "i-09eb5539ff54d1241",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.my_default_vpc",
            "aws_key_pair.deployer",
            "aws_security_group.my_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386403274105:security-group/sg-01f69775abbe4ca1a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f69775abbe4ca1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terrafrom-security-group",
            "name_prefix": "",
            "owner_id": "386403274105",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-050fcc97512a350ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "386403274105",
            "id": "sg-01f69775abbe4ca1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.my_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386403274105:security-group-rule/sgr-046b429454eafc211",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-046b429454eafc211",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01f69775abbe4ca1a",
            "security_group_rule_id": "sgr-046b429454eafc211",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "386403274105",
            "id": "sgr-046b429454eafc211",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.my_default_vpc",
            "aws_security_group.my_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386403274105:security-group-rule/sgr-08e6405210bacd40b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08e6405210bacd40b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01f69775abbe4ca1a",
            "security_group_rule_id": "sgr-08e6405210bacd40b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "386403274105",
            "id": "sgr-08e6405210bacd40b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.my_default_vpc",
            "aws_security_group.my_group"
          ]
        }
      ]
    }
  ]
}